# jester

./: README.md  pyproject.toml
jester/: client.py  parser.py  prompts.py  scorer.py  settings.py
jester/database/: joins.py  tables.py
